<resources>
    <string name="app_name">TestBottomNavigationBar</string>
    <string name="search">Поиск</string>
    <string name="training">Тренировки</string>
    <string name="timetable">Расписание</string>
    <string name="account">Профиль</string>
    <string name="sample_test_string">Hello world</string>
    <string name="sample_test_string2">Hello world2</string>
    <string name="sample_exercise_1">Жим лежа</string>
    <string name="back_button">back</string>
    <string name="add_set">Добавить подход</string>
    <string name="note">Комментарий:</string>
    <string name="edit">Редактировать</string>
    <string name="friends">Друзья</string>
    <string name="first_name">Имя:</string>
    <string name="second_name">Фамилия:</string>
    <string name="username">Никнейм:</string>
    <string name="age">лет</string>
    <string name="kg">кг</string>
    <string name="cm">см</string>
    <string name="percent">%</string>
    <string name="save">Сохранить</string>
    <string name="filter">Фильтр</string>
    <string name="cancel">Отмена</string>
    <string name="training_type">Вид тренировки:</string>
    <string name="all">Все</string>
    <string name="in_gym">В тренажерном зале</string>
    <string name="in_street">На улице</string>
    <string name="at_home">Дома</string>
    <string name="without_equipment">Без оборудования</string>
    <string name="with_equipment">С оборудованием</string>
    <string name="chest">Грудь:</string>
    <string name="big_chest">Большая грудная</string>
    <string name="small_chest">Малая грудная</string>
    <string name="biceps">Бицепс:</string>
    <string name="humeral">Плечевая</string>
    <string name="short_bundle">Короткий пучок</string>
    <string name="long_bundle">Длинный пучок</string>
    <string name="triceps">Трицепс:</string>
    <string name="lateral_bundle">Боковой пучок</string>
    <string name="middle_bundle">Средний пучок</string>
    <string name="back">Спина:</string>
    <string name="small_round">Малая круглая</string>
    <string name="big_round">Большая круглая</string>
    <string name="infraspinatus">Подостная</string>
    <string name="diamond_shaped">Ромбовидная</string>
    <string name="spine_extensor">Разгибатель позвоночника</string>
    <string name="latissimus_dorsi">Широчайшие мышцы спины</string>
    <string name="external_oblique">Внешние косые</string>
    <string name="shoulders">Плечи:</string>
    <string name="front_delta">Передняя дельта</string>
    <string name="middle_delta">Средняя дельта</string>
    <string name="rear_delta">Задняя дельта</string>
    <string name="hip_biceps">Бицепс бедра:</string>
    <string name="biceps_femoris">Двуглавая мышца бедра</string>
    <string name="thin">Тонкая</string>
    <string name="leading">Приводящая</string>
    <string name="semitendinosus">Полусухожильная</string>
    <string name="semi_membranous">Полуперепончатая</string>
    <string name="thigh_quads">Бедра квадрицепс:</string>
    <string name="rectus_femoris">Прямая мышца бедра</string>
    <string name="tailor">Портняжная</string>
    <string name="long_leading">Длинная приводящая</string>
    <string name="comb">Гребенчатая</string>
    <string name="broad_medial">Гребенчатая</string>
    <string name="wide_lateral">Широкая латеральная</string>
    <string name="press">Пресс:</string>
    <string name="anterior_dentate">Передняя зубчатая</string>
    <string name="outer_oblique">Наружная косая</string>
    <string name="rectus_abdominis_muscle">Прямая мышца живота</string>
    <string name="apply">Применить</string>
    <string name="cnt">раз</string>
    <string name="sec">сек</string>
    <string name="targete_muscle">Рабочие группы мышц:</string>
    <string name="text_description">Текстовое описание упражнения:</string>
    <string name="exercise_video">Видео с техникой выполнения:</string>
    <string name="add">Добавить</string>
    <string name="done">Готово</string>
    <string name="title">Название:</string>
    <string name="tags">Тэги:</string>
    <string name="chest2">Грудь</string>
    <string name="triceps2">Трицепс</string>
    <string name="legs">Ноги</string>
    <string name="back2">Спина</string>
    <string name="buttocks">Ягодицы</string>
    <string name="biceps2">Бицепс</string>
    <string name="add_exercise">Добавить упражнение</string>
    <string name="delete">Удалить</string>
    <string name="set_current">Сделать текущей тренировкой</string>
    <string name="order_number">Порядковый номер:</string>
    <string name="move">Переместить</string>
</resources>