<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/filter_main_color">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fragment_add_exercise_tag_toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/tool_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/filters_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/apply_cl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_add_exercise_tag_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/filter_main_color"
            android:paddingTop="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/tag_cl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tag_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="21dp"
                    android:text="@string/tags"
                    android:textAppearance="@style/Style14sp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:text="(не больше 3)"
                    android:textAppearance="@style/Style14sp"
                    android:textColor="@color/default_light_grey"
                    app:layout_constraintBottom_toBottomOf="@id/tag_title"
                    app:layout_constraintStart_toEndOf="@id/tag_title" />

                <TextView
                    android:id="@+id/tags_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="18dp"
                    android:text="@string/all"
                    android:textAppearance="@style/Style14sp"
                    android:textColor="@color/default_orange"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/tag_title"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/chest"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="19dp"
                    android:background="@drawable/filter_type_background"
                    android:gravity="center"
                    android:text="@string/chest2"
                    android:textAppearance="@style/Style14sp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tag_title" />

                <TextView
                    android:id="@+id/triceps"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/filter_type_background"
                    android:gravity="center"
                    android:text="@string/triceps2"
                    android:textAppearance="@style/Style14sp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@id/chest"
                    app:layout_constraintStart_toEndOf="@id/chest" />

                <TextView
                    android:id="@+id/legs"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/filter_type_background"
                    android:gravity="center"
                    android:text="@string/legs"
                    android:textAppearance="@style/Style14sp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@id/triceps"
                    app:layout_constraintStart_toEndOf="@id/triceps" />

                <TextView
                    android:id="@+id/back"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/filter_type_background"
                    android:gravity="center"
                    android:text="@string/back2"
                    android:textAppearance="@style/Style14sp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/chest" />

                <TextView
                    android:id="@+id/buttocs"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/filter_type_background"
                    android:gravity="center"
                    android:text="@string/buttocks"
                    android:textAppearance="@style/Style14sp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@id/back"
                    app:layout_constraintStart_toEndOf="@id/back" />

                <TextView
                    android:id="@+id/biceps"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/filter_type_background"
                    android:gravity="center"
                    android:text="@string/biceps"
                    android:textAppearance="@style/Style14sp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@id/buttocs"
                    app:layout_constraintStart_toEndOf="@id/buttocs" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="13.5dp"
                    android:layout_marginTop="21dp"
                    android:background="@color/filter_stroke_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/biceps" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/apply_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/filter_main_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/apply"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/apply_button_background"
            android:gravity="center"
            android:text="@string/done"
            android:textAppearance="@style/Style16sp"
            android:textColor="@color/default_light_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>