<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/default_dark">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fragment_editing_training_exercise_toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/tool_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_editing_training_exercise_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_editing_training_exercise_toolbar">

        <TextView
            android:id="@+id/exercise_order_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="40dp"
            android:text="@string/order_number"
            android:textAppearance="@style/Style16sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:textColor="@color/default_light_grey"
            android:id="@+id/fragment_editing_training_exercise_et"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="22dp"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@id/exercise_order_number"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/fragment_training_editing_edit"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:height="40dp"
        android:background="@drawable/save_button_background"
        android:gravity="center"
        android:text="@string/move"
        android:textAppearance="@style/Style16sp"
        android:textColor="@color/default_light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_editing_training_exercise_cl" />

    <TextView
        android:id="@+id/fragment_editing_training_exercise_delete"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:height="40dp"
        android:background="@drawable/delete_button_background"
        android:gravity="center"
        android:text="@string/delete"
        android:textAppearance="@style/Style16sp"
        android:textColor="@color/default_light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_training_editing_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>