<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_dark"
    android:clickable="true">

    <EditText
        android:id="@+id/fragment_search_edittext"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="11dp"
        android:autofillHints=""
        android:background="@drawable/search_edittext_background"
        android:hint="@string/search"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingEnd="0dp"
        android:paddingBottom="5dp"
        android:textAppearance="@style/EditTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_search_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_search_filter_cl"
        app:layout_constraintTop_toBottomOf="@id/fragment_search_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:paddingStart="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/fragment_search_filter"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="11dp"
            android:layout_marginTop="12dp"
            android:textAppearance="@style/Style15sp"
            android:textColor="@color/default_light_grey"
            android:text="@string/filter"/>

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fragment_search_filter"
            android:src="@drawable/ic_filter"
            android:layout_marginEnd="3dp"
            android:layout_marginTop="12dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_search_add_exercise_cl"
        app:layout_constraintTop_toBottomOf="@id/fragment_search_edittext"
        app:layout_constraintEnd_toStartOf="@id/fragment_search_filter_cl"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:paddingStart="5dp"
        android:paddingBottom="5dp"
        android:layout_marginEnd="5dp">

        <TextView
            android:id="@+id/fragment_search_add_exercise"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="11dp"
            android:layout_marginTop="12dp"
            android:textAppearance="@style/Style15sp"
            android:textColor="@color/default_light_grey"
            android:text="@string/add"/>

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fragment_search_add_exercise"
            android:src="@drawable/ic_plus_white_18"
            android:layout_marginEnd="7dp"
            android:layout_marginTop="13dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_search_cl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_search_filter_cl"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_search_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fragment_search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/tool_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>